# TagSystem

./: CMakeLists.txt  README.md
include/: genTagSeqRange.hpp
src/: CMakeLists.txt  genCollatzSeq.cpp  genPostTagSeq.cpp  genTag.hpp  genTagSeq.cpp  genTagSeqAccu.cpp  genTagSeqLoop.cpp  genTagSeqRange.hpp  genTagSeqRec.cpp  genTagSequence.cpp  prodExcep.hpp  prodRules.cpp  prodRules.hpp
test/: CMakeLists.txt  genPostTagLoop.cpp  genPostTagRange.cpp  genPostTagSeq.cpp
